# ai-finance-paper

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PIPELINE_MAP.md  README.md  justfile  pyproject.toml
.claude/: settings.local.json
.claude/agents/: comprehensive-reviewer.md  framing-lens.md  general-referee.md  literature-guardian.md  model-verifier.md  paper-writer.md  presentation-lens.md  referee-C-literature.md  research-director.md  research-evaluator.md  theory-builder.md  theory-lens.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
agents/: empirical-agent.md  literature-guardian.md  model-verifier.md  paper-writer.md  research-director.md  research-evaluator.md  theory-builder.md
archive/ai-homogeneity-paper/: README.md
archive/revision-artifacts/: README.md  literature_review_post_referee.md  referee-A-theory.md  referee-B-presentation.md  report_A.md  report_C.md  report_general_connections.md  report_general_general.md  report_general_method.md  (+5 more)
code/: build_dataset.py  download_data.py  generate_figures.py  run_regressions.py
context/: README.md  evaluation_criteria.md  evaluator_feedback.md  literature_notes.md  model_equations.md  research_context.md  research_plan.md  research_plan_final.md  task_queue.md  threat_map_final.md  threat_papers.md
paper/: main.tex  references.bib
tests/: test_pipeline.py
workflow/: README.md  ai-workflow.md  consolidated_issues.md  interactive_runbook.md  phase1_flowchart.md  project-runbook.md  referee-reports.md  research-log.md  run_pipeline.sh  task_queue.md
(+88 files in other folders)
