[project]
name = "research-paper-pipeline"
version = "0.1.0"
description = "Multi-agent pipeline for drafting academic research papers"
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "pandas",
    "sympy",
    "scipy",
    "matplotlib",
    "statsmodels",
    "python-dotenv",
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade
ignore = ["E501"]                  # long lines handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
]

[tool.setuptools.packages.find]
include = ["code*"]
